[package]
name = "redshirt"
version = "0.1.0"
authors = ["FaultyRAM <explodingpsu@gmail.com>"]
edition = "2018"
description = "Provides support for the Redshirt 1 and Redshirt 2 data encoding schemes."
repository = "https://github.com/FaultyRAM/redshirt-rs"
readme = "README.md"
keywords = ["obfuscation", "deobfuscation", "uplink"]
categories = ["cryptography"]
license = "Apache-2.0 OR MIT"

[profile.release]
lto = true
codegen-units = 1
